SCSS fix for too wide images
Set max-width to -webkit-fill-available

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@ body {
 }
 
 img {
-  max-width: max-content;
+  max-width: -webkit-fill-available;
 }
 
 .App {
